--- a/TrainPlannerRealizer.ipynb
+++ b/TrainPlannerRealizer.ipynb
@@ -11,14 +11,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import T5ForConditionalGeneration, T5Tokenizer, Trainer, TrainingArguments\n",
     "from DeepNLGDatasetReader import run_parser\n",
     "from Utils import PlannerDataset, RealizerDataset, T2TDataCollator, deepnlg_entry_to_examples\n",
     "\n",
-    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "DEVICE"
    ]
   },
   {
@@ -160,7 +172,7 @@
     "   learning_rate=2e-5,\n",
     "   per_device_train_batch_size=4,\n",
     "   per_device_eval_batch_size=4,\n",
-    "   num_train_epochs=1,\n",
+    "   num_train_epochs=2,\n",
     "   weight_decay=0.01,\n",
     "   push_to_hub=False\n",
     ")\n",
@@ -183,9 +195,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "***** Running training *****\n",
+      "  Num examples = 18102\n",
+      "  Num Epochs = 2\n",
+      "  Instantaneous batch size per device = 4\n",
+      "  Total train batch size (w. parallel, distributed & accumulation) = 8\n",
+      "  Gradient Accumulation steps = 1\n",
+      "  Total optimization steps = 4526\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='4526' max='4526' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [4526/4526 1:54:10, Epoch 2/2]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>1.210200</td>\n",
+       "      <td>0.599369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.735900</td>\n",
+       "      <td>0.537286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1500</td>\n",
+       "      <td>0.653500</td>\n",
+       "      <td>0.531378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.620800</td>\n",
+       "      <td>0.522172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2500</td>\n",
+       "      <td>0.592100</td>\n",
+       "      <td>0.528740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.594600</td>\n",
+       "      <td>0.545326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3500</td>\n",
+       "      <td>0.567000</td>\n",
+       "      <td>0.489798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4000</td>\n",
+       "      <td>0.579000</td>\n",
+       "      <td>0.491292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4500</td>\n",
+       "      <td>0.573900</td>\n",
+       "      <td>0.489517</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-500\n",
+      "Configuration saved in neural_planner/checkpoint-500/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-500/pytorch_model.bin\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-1000\n",
+      "Configuration saved in neural_planner/checkpoint-1000/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-1000/pytorch_model.bin\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-1500\n",
+      "Configuration saved in neural_planner/checkpoint-1500/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-1500/pytorch_model.bin\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-2000\n",
+      "Configuration saved in neural_planner/checkpoint-2000/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-2000/pytorch_model.bin\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-2500\n",
+      "Configuration saved in neural_planner/checkpoint-2500/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-2500/pytorch_model.bin\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-3000\n",
+      "Configuration saved in neural_planner/checkpoint-3000/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-3000/pytorch_model.bin\n",
+      "Deleting older checkpoint [neural_planner/checkpoint-500] due to args.save_total_limit\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-3500\n",
+      "Configuration saved in neural_planner/checkpoint-3500/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-3500/pytorch_model.bin\n",
+      "Deleting older checkpoint [neural_planner/checkpoint-1000] due to args.save_total_limit\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-4000\n",
+      "Configuration saved in neural_planner/checkpoint-4000/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-4000/pytorch_model.bin\n",
+      "Deleting older checkpoint [neural_planner/checkpoint-1500] due to args.save_total_limit\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 2268\n",
+      "  Batch size = 8\n",
+      "Saving model checkpoint to neural_planner/checkpoint-4500\n",
+      "Configuration saved in neural_planner/checkpoint-4500/config.json\n",
+      "Model weights saved in neural_planner/checkpoint-4500/pytorch_model.bin\n",
+      "Deleting older checkpoint [neural_planner/checkpoint-2000] due to args.save_total_limit\n",
+      "/home/research/.conda/envs/royeisen/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "\n",
+      "\n",
+      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=4526, training_loss=0.679986734807465, metrics={'train_runtime': 6860.5793, 'train_samples_per_second': 5.277, 'train_steps_per_second': 0.66, 'total_flos': 1.007603610144768e+16, 'train_loss': 0.679986734807465, 'epoch': 2.0})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
@@ -199,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +406,7 @@
        "'S 0 1 2 3'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,6 +415,39 @@
     "planner.eval()\n",
     "out_ids = planner.generate(dev_data[0]['input_ids'].unsqueeze(0).to(DEVICE))\n",
     "planner_tokenizer.decode(out_ids[0], skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tokenizer config file saved in planner/tokenizer_config.json\n",
+      "Special tokens file saved in planner/special_tokens_map.json\n",
+      "added tokens file saved in planner/added_tokens.json\n",
+      "Copy vocab file to planner/spiece.model\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('planner/tokenizer_config.json',\n",
+       " 'planner/special_tokens_map.json',\n",
+       " 'planner/spiece.model',\n",
+       " 'planner/added_tokens.json')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planner_tokenizer.save_pretrained('planner')"
    ]
   },
   {
